---------------------
* LUCENE-8519: MultiDocValues.getNormValues should not call getMergedFieldInfos (Rushabh Shah)

Bug Fixes
---------------------

* LUCENE-10574: Prevent pathological O(N^2) merging. (Adrien Grand)

* LUCENE-10582: Fix merging of overridden CollectionStatistics in CombinedFieldQuery (Yannick Welsch)

* LUCENE-10563: Fix failure to tessellate complex polygon (Craig Taverner)

Other
---------------------

* LUCENE-10370: pass proper classpath/module arguments for forking jvms from within tests. (Dawid Weiss)

* LUCENE-10604: Improve ability to test and debug triangulation algorithm in Tessellator.
  (Craig Taverner)

======================= Lucene 9.2.0 =======================

API Changes
---------------------

* LUCENE-10325: Facets API extended to support getTopFacets. (Yuting Gan)

* LUCENE-10482: Allow users to create their own DirectoryTaxonomyReaders with empty taxoArrays instead of letting the
  taxoEpoch decide. Add a test case that demonstrates the inconsistencies caused when you reuse taxoArrays on older
  checkpoints. (Gautam Worah)

* LUCENE-10558: Add new constructors to Kuromoji and Nori dictionary classes to support classpath /
  module system usage. It is now possible to use JDK's Class/ClassLoader/Module#getResource(...) apis
  and pass their returned URL to dictionary constructors to load resources from Classpath or Module
  resources. (Uwe Schindler, Tomoko Uchida, Mike Sokolov)

New Features
---------------------

* LUCENE-10312: Add PersianStemmer based on the Arabic stemmer. (Ramin Alirezaee)

* LUCENE-10539: Return a stream of completions from FSTCompletion. (Dawid Weiss)

* LUCENE-10385: Implement Weight#count on IndexSortSortedNumericDocValuesRangeQuery
  to speed up computing the number of hits when possible. (Lu Xugang, Luca Cavanna, Adrien Grand)

* LUCENE-10422: Monitor Improvements: `Monitor` can use a custom `Directory` 
  implementation. `Monitor` can be created with a readonly `QueryIndex` in order to